--- a/config.yaml
+++ b/config.yaml
@@ -1,16 +1,32 @@
-input:
-  r1: "giab_benchmark/data/fastq/HG002/HG002.novaseq.pcr-free.35x.R1.fastq.gz"
-  r2: "giab_benchmark/data/fastq/HG002/HG002.novaseq.pcr-free.35x.R2.fastq.gz"
-ref_fasta: "giab_benchmark/data/reference/GRCh38/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta.gz"
-bwa_index: "genome.bwa" # This will need to be generated or provided
-outdir: "results_snakemake"
-joint_calling: false
+---
+# config.yaml
 
-# Container versions
+# --- Input Data ---
+# Path to the samplesheet CSV file.
+# The CSV must have three columns: sample,fastq_1,fastq_2
+samplesheet: "samples.csv"
+
+# --- Reference Genome ---
+# Make sure the reference is indexed (e.g., with `samtools faidx` and `bwa-mem2 index`).
+ref_fasta: "giab_benchmark/data/reference/GRCh38/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta.gz"
+bwa_index: "giab_benchmark/data/reference/GRCh38/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta.gz"
+
+# --- Workflow Options ---
+# Set to `true` to run the joint calling step with GLnexus.
+joint_calling: true
+
+# --- Container Images ---
+# Specify the Docker or Singularity container images for each tool.
+# Using specific versions ensures reproducibility.
 containers:
-  fastp: 'quay.io/biocontainers/fastp:0.24.2--hafa4716_0'
-  bwa_mem2: 'quay.io/biocontainers/bwa-mem2:2.3--h5b5514e_2'
-  samtools: 'quay.io/biocontainers/samtools:1.22--h50ea8bc_0'
-  deepvariant: 'google/deepvariant:1.8.0'
-  glnexus: 'quay.io/biocontainers/glnexus:1.4.1--h9ee0642_0'
-  multiqc: 'quay.io/biocontainers/multiqc:1.30--pyhdfd78af_0'
+  fastp: "docker://quay.io/biocontainers/fastp:0.23.2--h79da9fb_0"
+  bwa_samtools: "docker://quay.io/biocontainers/bwa-mem2:2.2.1--h572174a_3" # This container also has samtools
+  deepvariant: "docker://google/deepvariant:1.5.0"
+  glnexus: "docker://quay.io/biocontainers/glnexus:1.4.1--h9ee0642_0"
+  multiqc: "docker://quay.io/biocontainers/multiqc:1.14--pyhdfd78af_0"
+
+# --- Optional Parameters ---
+# Add extra command-line parameters for specific tools if needed.
+# params:
+#   fastp: "--detect_adapter_for_pe"
+
