--- a/config.yaml
+++ b/config.yaml
@@ -20,7 +20,7 @@ joint_calling: true
 # Using specific versions ensures reproducibility.
 containers:
   fastp: "docker://quay.io/biocontainers/fastp:1.0.1--heae3180_0"
-  bwa: "docker://quay.io/biocontainers/bwa-mem2:2.3--he70b90d_0"
+  bwa: "docker://hmartiniano/bwa-mem2-samtools:2.3_1.22-1"
   samtools: "docker://quay.io/biocontainers/samtools:1.22.1--h96c455f_0"
   deepvariant: "docker://google/deepvariant:1.9.0"
   glnexus: "docker://quay.io/biocontainers/glnexus:1.4.1--h17e8430_5"
